--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul class="plan-lists">
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" width="64px" height="64">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#antenna-1"></use>
                 </svg>
               </div>
@@ -55,7 +55,7 @@
             </li>
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" width="64px" height="64">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#clock-1"></use>
                 </svg>
               </div>
@@ -64,7 +64,7 @@
             </li>
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" width="64px" height="64">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#diagram-1"></use>
                 </svg>
               </div>
@@ -73,7 +73,7 @@
             </li>
             <li class="plan-list">
               <div class="icon-container">
-                <svg class="advantages-icon" width="64px" height="64">
+                <svg class="advantages-icon" width="64" height="64">
                   <use href="./images/icons.svg#astronaut-1"></use>
                 </svg>
               </div>
@@ -97,28 +97,28 @@
                     <li class="social-link">
                       <a href="https://www.instagram.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.twitter.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.facebook.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.linkedin.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
@@ -136,28 +136,28 @@
                     <li class="social-link">
                       <a href="https://www.instagram.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.twitter.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.facebook.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.linkedin.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
@@ -175,28 +175,28 @@
                     <li class="social-link">
                       <a href="https://www.instagram.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.twitter.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.facebook.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.linkedin.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
@@ -214,28 +214,28 @@
                     <li class="social-link">
                       <a href="https://www.instagram.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#instagram-2" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.twitter.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#twitter-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.facebook.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#facebook-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-link">
                       <a href="https://www.linkedin.com">
                         <svg class="social-icon">
-                          <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                          <use href="./images/icons.svg#linkedin-1" width="40" height="40"></use>
                         </svg>
                       </a>
                     </li>
@@ -321,33 +321,33 @@
           <p class="info-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
         <div class="socials">
-          <p class="footer-social-title">Social Media</p>
+          <p class="footer-social-title">Social media</p>
           <ul class="social-links">
             <li class="social-link">
-              <a href="https://www.instagram.com">
+              <a class="footer-link" href="https://www.instagram.com">
                 <svg class="social-icon">
-                  <use href="./images/icons.svg#instagram-2" width="20" height="20" x="10" y="10"></use>
+                  <use href="./images/icons.svg#instagram-2" width="24" height="24"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="https://www.twitter.com">
+              <a class="footer-link" href="https://www.twitter.com">
                 <svg class="social-icon">
-                  <use href="./images/icons.svg#twitter-1" width="20" height="20" x="10" y="10"></use>
+                  <use href="./images/icons.svg#twitter-1" width="24" height="24"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="https://www.facebook.com">
+              <a class="footer-link" href="https://www.facebook.com">
                 <svg class="social-icon">
-                  <use href="./images/icons.svg#facebook-1" width="20" height="20" x="10" y="10"></use>
+                  <use href="./images/icons.svg#facebook-1" width="24" height="24"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="https://www.linkedin.com">
+              <a class="footer-link" href="https://www.linkedin.com">
                 <svg class="social-icon">
-                  <use href="./images/icons.svg#linkedin-1" width="20" height="20" x="10" y="10"></use>
+                  <use href="./images/icons.svg#linkedin-1" width="24" height="24"></use>
                 </svg>
               </a>
             </li>
